removed title from navbar, fixed navigation buttons sticking too much to the right, added page title

--- a/public/style.css
+++ b/public/style.css
@@ -111,3 +111,7 @@ a.list-group-item {
   border-radius: 5px;
   background-color: #98e6e6;
 }
+
+.margin-right {
+  margin-right: 10px;
+}
